work on star hole data structure

--- a/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
@@ -1079,11 +1079,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
+      "Check the NumPy 1.11 release notes for more information.\n",
+      "  ma.MaskedArray.__setitem__(self, index, value)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SERVS initial catalogue as 152497 sources.\n",
+      "SERVS cleaned catalogue as 152497 sources (0 removed).\n",
+      "SERVS has 0 sources flagged as having been cleaned\n"
+     ]
+    }
+   ],
    "source": [
     "nb_servs_orig = len(servs)\n",
     "servs = masterlist.remove_duplicates(\n",
@@ -1098,11 +1117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
+      "Check the NumPy 1.11 release notes for more information.\n",
+      "  ma.MaskedArray.__setitem__(self, index, value)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SWIRE initial catalogue as 56221 sources.\n",
+      "SWIRE cleaned catalogue as 56221 sources (0 removed).\n",
+      "SWIRE has 0 sources flagged as having been cleaned\n"
+     ]
+    }
+   ],
    "source": [
     "nb_swire_orig = len(swire)\n",
     "swire = masterlist.remove_duplicates(\n",
@@ -1118,62 +1156,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
+      "Check the NumPy 1.11 release notes for more information.\n",
+      "  ma.MaskedArray.__setitem__(self, index, value)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PanSTARRS initial catalogue as 43975 sources.\n",
+      "PanSTARRS cleaned catalogue as 37491 sources (6484 removed).\n",
+      "PanSTARRS has 5897 sources flagged as having been cleaned\n"
+     ]
+    }
+   ],
    "source": [
-    "nb_panstarrs_orig = len(sparcs)\n",
-    "sparcs = masterlist.remove_duplicates(\n",
-    "    sparcs, 'sparcs_ra', 'sparcs_dec', \n",
-    "    sort_col=['merr_app_cfht_megacam_r', 'merr_app_cfht_megacam_u',\n",
-    "              'merr_app_cfht_megacam_g', 'merr_app_cfht_megacam_z'],\n",
-    "    flag_name='sparcs_flag_cleaned')\n",
-    "nb_sparcs = len(sparcs)\n",
-    "print(\"SpARCS initial catalogue as {} sources.\".format(nb_sparcs_orig))\n",
-    "print(\"SpARCS cleaned catalogue as {} sources ({} removed).\".format(nb_sparcs, nb_sparcs_orig - nb_sparcs))\n",
-    "print(\"SpARCS has {} sources flagged as having been cleaned\".format(np.sum(sparcs['sparcs_flag_cleaned'])))"
+    "nb_panstarrs_orig = len(panstarrs)\n",
+    "panstarrs = masterlist.remove_duplicates(\n",
+    "    panstarrs, 'panstarrs_ra', 'panstarrs_dec', \n",
+    "    sort_col=['merr_app_panstarrs_g', \n",
+    "              'merr_app_panstarrs_r',\n",
+    "              'merr_app_panstarrs_i', \n",
+    "              'merr_app_panstarrs_z', \n",
+    "              'merr_app_panstarrs_y'],\n",
+    "    flag_name='panstarrs_flag_cleaned')\n",
+    "nb_panstarrs = len(panstarrs)\n",
+    "print(\"PanSTARRS initial catalogue as {} sources.\".format(nb_panstarrs_orig))\n",
+    "print(\"PanSTARRS cleaned catalogue as {} sources ({} removed).\".format(nb_panstarrs, nb_panstarrs_orig - nb_panstarrs))\n",
+    "print(\"PanSTARRS has {} sources flagged as having been cleaned\".format(np.sum(panstarrs['panstarrs_flag_cleaned'])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
+      "Check the NumPy 1.11 release notes for more information.\n",
+      "  ma.MaskedArray.__setitem__(self, index, value)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Duplicate column names",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-05703b1e180a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m      \u001b[0;34m'merr_fireworks_FKs.t'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m      'merr_fireworks_F24.t'],\n\u001b[0;32m---> 22\u001b[0;31m     flag_name='fireworks_flag_cleaned')\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0mnb_fireworks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfireworks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fireworks initial catalogue as {} sources.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnb_fireworks_orig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/GitHub/herschelhelp_internal/herschelhelp_internal/masterlist.py\u001b[0m in \u001b[0;36mremove_duplicates\u001b[0;34m(table, ra_col, dec_col, radius, sort_col, reverse, flag_name)\u001b[0m\n\u001b[1;32m     88\u001b[0m         \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mflag_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m     ))\n\u001b[1;32m     92\u001b[0m     \u001b[0mtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mflag_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36madd_column\u001b[0;34m(self, col, index, rename_duplicate)\u001b[0m\n\u001b[1;32m   1525\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1526\u001b[0m             \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1527\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrename_duplicate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrename_duplicate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1528\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1529\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0madd_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrename_duplicate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36madd_columns\u001b[0;34m(self, cols, indexes, copy, rename_duplicate)\u001b[0m\n\u001b[1;32m   1633\u001b[0m                 \u001b[0mexisting_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1634\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1635\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_init_from_cols\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1636\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1637\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_replace_column_warnings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36m_init_from_cols\u001b[0;34m(self, cols)\u001b[0m\n\u001b[1;32m    735\u001b[0m         \u001b[0;31m# convert columns with units to a Quantity mixin.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m         \u001b[0mnewcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convert_col_for_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 737\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_table_from_cols\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    738\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    739\u001b[0m         \u001b[0;31m# Deduplicate indices.  It may happen that after pickling or when\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36m_make_table_from_cols\u001b[0;34m(table, cols)\u001b[0m\n\u001b[1;32m    780\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cannot have None for column name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    781\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolnames\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 782\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Duplicate column names'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    783\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    784\u001b[0m         \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTableColumns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Duplicate column names"
+     ]
+    }
+   ],
    "source": [
     "nb_fireworks_orig = len(fireworks)\n",
     "fireworks = masterlist.remove_duplicates(\n",
     "    fireworks, 'fireworks_ra', 'fireworks_dec', \n",
-    "    sort_col=['merr_app_cfht_megacam_r', 'merr_app_cfht_megacam_u',\n",
-    "              'merr_app_cfht_megacam_g', 'merr_app_cfht_megacam_z'],\n",
+    "    sort_col=['merr_fireworks_FU38', \n",
+    "     'merr_fireworks_FB435', \n",
+    "     'merr_fireworks_FB',\n",
+    "     'merr_fireworks_FV',\n",
+    "     'merr_fireworks_FV606',\n",
+    "     'merr_fireworks_FRc',\n",
+    "     'merr_fireworks_Fi775',\n",
+    "     'merr_fireworks_FI',\n",
+    "     'merr_fireworks_Fz850',\n",
+    "     'merr_fireworks_FJ',\n",
+    "     'merr_fireworks_FH',\n",
+    "     'merr_fireworks_FKs',\n",
+    "     'merr_fireworks_F3.6',\n",
+    "     'merr_fireworks_F4.5',\n",
+    "     'merr_fireworks_F5.8',\n",
+    "     'merr_fireworks_F8.0',\n",
+    "     'merr_fireworks_FKs.t',\n",
+    "     'merr_fireworks_F24.t'],\n",
     "    flag_name='fireworks_flag_cleaned')\n",
     "nb_fireworks = len(fireworks)\n",
     "print(\"Fireworks initial catalogue as {} sources.\".format(nb_fireworks_orig))\n",
-    "print(\"Fireworks cleaned catalogue as {} sources ({} removed).\".format(nb_sparcs, nb_fireworks_orig - nb_fireworks))\n",
+    "print(\"Fireworks cleaned catalogue as {} sources ({} removed).\".format(nb_fireworks, nb_fireworks_orig - nb_fireworks))\n",
     "print(\"Fireworks has {} sources flagged as having been cleaned\".format(np.sum(fireworks['fireworks_flag_cleaned'])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
+      "Check the NumPy 1.11 release notes for more information.\n",
+      "  ma.MaskedArray.__setitem__(self, index, value)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COMBO initial catalogue as 55551 sources.\n",
+      "COMBO cleaned catalogue as 55551 sources (0 removed).\n",
+      "COMBO has 0 sources flagged as having been cleaned\n"
+     ]
+    }
+   ],
    "source": [
     "nb_combo_orig = len(combo)\n",
     "combo = masterlist.remove_duplicates(\n",
     "    combo, 'combo_ra', 'combo_dec', \n",
-    "    sort_col=['merr_app_cfht_megacam_r', 'merr_app_cfht_megacam_u',\n",
-    "              'merr_app_cfht_megacam_g', 'merr_app_cfht_megacam_z'],\n",
-    "    flag_name='sparcs_flag_cleaned')\n",
-    "nb_sparcs = len(sparcs)\n",
-    "print(\"SpARCS initial catalogue as {} sources.\".format(nb_sparcs_orig))\n",
-    "print(\"SpARCS cleaned catalogue as {} sources ({} removed).\".format(nb_sparcs, nb_sparcs_orig - nb_sparcs))\n",
-    "print(\"SpARCS has {} sources flagged as having been cleaned\".format(np.sum(sparcs['sparcs_flag_cleaned'])))"
+    "    sort_col=['merr_combo_R',  \n",
+    "     'merr_combo_Uj', \n",
+    "     'merr_combo_Bj',\n",
+    "     'merr_combo_Vj',\n",
+    "     'merr_combo_us',\n",
+    "     'merr_combo_gs',\n",
+    "     'merr_combo_rs',\n",
+    "     'merr_combo_Ub',\n",
+    "     'merr_combo_Bb',\n",
+    "     'merr_combo_Vb',\n",
+    "     'merr_combo_S280',\n",
+    "     'merr_combo_S145'],\n",
+    "    flag_name='combo_flag_cleaned')\n",
+    "nb_combo = len(combo)\n",
+    "print(\"COMBO initial catalogue as {} sources.\".format(nb_combo_orig))\n",
+    "print(\"COMBO cleaned catalogue as {} sources ({} removed).\".format(nb_combo, nb_combo_orig - nb_combo))\n",
+    "print(\"COMBO has {} sources flagged as having been cleaned\".format(np.sum(combo['combo_flag_cleaned'])))"
    ]
   },
   {
@@ -1187,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -1199,11 +1330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wfc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-48-5e7652792fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m masterlist.nb_astcor_diag_plot(\n\u001b[0;32m----> 2\u001b[0;31m     wfc['wfc_ra'], wfc['wfc_dec'], gaia_coords.ra, gaia_coords.dec)\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'wfc' is not defined"
+     ]
+    }
+   ],
    "source": [
     "masterlist.nb_astcor_diag_plot(\n",
     "    wfc['wfc_ra'], wfc['wfc_dec'], gaia_coords.ra, gaia_coords.dec)"
