--- a/dmu4/generate_holes.ipynb
+++ b/dmu4/generate_holes.ipynb
@@ -58,7 +58,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -66,60 +67,137 @@
      "output_type": "stream",
      "text": [
       "There are 62607 GAIA stars in AKARI-NEP\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_AKARI-NEP/holes_AKARI-NEP.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_AKARI-NEP/data/holes_AKARI-NEP.reg\n",
       "There are 39411 GAIA stars in AKARI-SEP\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_AKARI-SEP/holes_AKARI-SEP.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_AKARI-SEP/data/holes_AKARI-SEP.reg\n",
       "There are 35005 GAIA stars in Bootes\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_Bootes/holes_Bootes.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_Bootes/data/holes_Bootes.reg\n",
       "There are 35443 GAIA stars in CDFS-SWIRE\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_CDFS-SWIRE/holes_CDFS-SWIRE.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_CDFS-SWIRE/data/holes_CDFS-SWIRE.reg\n",
       "There are 10709 GAIA stars in COSMOS\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_COSMOS/holes_COSMOS.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_COSMOS/data/holes_COSMOS.reg\n",
       "There are 9542 GAIA stars in EGS\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_EGS/holes_EGS.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_EGS/data/holes_EGS.reg\n",
       "There are 53681 GAIA stars in ELAIS-N1\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-N1/holes_ELAIS-N1.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1.reg\n",
       "There are 48330 GAIA stars in ELAIS-N2\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-N2/holes_ELAIS-N2.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-N2/data/holes_ELAIS-N2.reg\n",
       "There are 24528 GAIA stars in ELAIS-S1\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-S1/holes_ELAIS-S1.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-S1/data/holes_ELAIS-S1.reg\n",
       "There are 286982 GAIA stars in GAMA-09\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_GAMA-09/holes_GAMA-09.reg\n",
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_GAMA-09/data/holes_GAMA-09.reg\n",
       "There are 193963 GAIA stars in GAMA-12\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_GAMA-12/holes_GAMA-12.reg\n",
-      "There are 238908 GAIA stars in GAMA-15\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_GAMA-15/holes_GAMA-15.reg\n",
-      "There are 1556 GAIA stars in HDF-N\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_HDF-N/holes_HDF-N.reg\n",
-      "There are 885551 GAIA stars in Herschel-Stripe-82\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_Herschel-Stripe-82/holes_Herschel-Stripe-82.reg\n",
-      "There are 3444 GAIA stars in Lockman-SWIRE     \n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_Lockman-SWIRE/holes_Lockman-SWIRE.reg\n",
-      "There are 428701 GAIA stars in NGP\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_NGP/holes_NGP.reg\n",
-      "There are 670 GAIA stars in SA13\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_SA13/holes_SA13.reg\n",
-      "There are 745580 GAIA stars in SGP\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_SGP/holes_SGP.reg\n",
-      "There are 3554 GAIA stars in SPIRE-NEP\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_SPIRE-NEP/holes_SPIRE-NEP.reg\n",
-      "There are 458084 GAIA stars in SSDF\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_SSDF/holes_SSDF.reg\n",
-      "There are 39625 GAIA stars in xFLS\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_xFLS/holes_xFLS.reg\n",
-      "There are 1757 GAIA stars in XMM-13hr\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_XMM-13hr/holes_XMM-13hr.reg\n",
-      "There are 42203 GAIA stars in XMM-LSS\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_XMM-LSS/holes_XMM-LSS.reg\n"
+      "Starmask (basic 10 arcsec circles) written to dmu4_sm_GAMA-12/data/holes_GAMA-12.reg\n",
+      "There are 238908 GAIA stars in GAMA-15\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-99b37bd34e49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfield\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfields\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     starmask.create_holes('../dmu0/dmu0_GAIA/data/GAIA_' + field[0] + '.fits',\n\u001b[0;32m----> 3\u001b[0;31m                              'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg')\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/GitHub/herschelhelp_internal/herschelhelp_internal/starmask.py\u001b[0m in \u001b[0;36mcreate_holes\u001b[0;34m(gaia, target, radius)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mstar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstars\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mstar\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'phot_g_mean_mag'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m16\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m             f.writelines('circle ' \n\u001b[1;32m     64\u001b[0m                          \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstar\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ra'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/row.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_table\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mastropy/table/_column_mixins.pyx\u001b[0m in \u001b[0;36mastropy.table._column_mixins._MaskedColumnGetitemShim.__getitem__ (astropy/table/_column_mixins.c:1316)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mastropy/table/_column_mixins.pyx\u001b[0m in \u001b[0;36mastropy.table._column_mixins.base_getitem (astropy/table/_column_mixins.c:992)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mastropy/table/_column_mixins.pyx\u001b[0m in \u001b[0;36mastropy.table._column_mixins.masked_column_getitem (astropy/table/_column_mixins.c:1171)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, indx)\u001b[0m\n\u001b[1;32m   3156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3157\u001b[0m         \"\"\"\n\u001b[0;32m-> 3158\u001b[0;31m         \u001b[0mdout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3159\u001b[0m         \u001b[0;31m# We could directly use ndarray.__getitem__ on self.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3160\u001b[0m         \u001b[0;31m# But then we would have to modify __array_finalize__ to prevent the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py\u001b[0m in \u001b[0;36mdata\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    997\u001b[0m         \u001b[0;31m# The following is necessary because of a bug in Numpy, which was\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    998\u001b[0m         \u001b[0;31m# fixed in numpy/numpy#2703. The fix should be included in Numpy 1.8.0.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 999\u001b[0;31m         \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1000\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1001\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__setattr__\u001b[0;34m(self, attr, value)\u001b[0m\n\u001b[1;32m   3306\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3308\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3309\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3310\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mattr\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'dtype'\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_mask\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnomask\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "for field in fields:\n",
     "    starmask.create_holes('../dmu0/dmu0_GAIA/data/GAIA_' + field[0] + '.fits',\n",
-    "                             'dmu4_sm_' + field[0] + '/holes_' + field[0] + '.reg')\n",
+    "                             'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg')\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "\n",
+      "WCSAXES =                    2 / Number of coordinate axes\n",
+      "CRPIX1  =            [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "     0.5 / Pixel coordinate of reference point\n",
+      "CRPIX2  =                0.5 / Pi [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "xel coordinate of reference point\n",
+      "CDELT1  =                0.675 / [deg] Coordin [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ate increment at reference point\n",
+      "CDELT2  =                0.675 / [deg] Coordina [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "te increment at reference point\n",
+      "RADECSYSa= 'ICRS    '           / International  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "Celestial Ref. System\n",
+      "CUNIT1  = 'deg     '                / Units of coordinate  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "increment and value\n",
+      "CUNIT2  = 'deg     '                / Units of coordinate in [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "crement and value\n",
+      "CTYPE1  = 'RA---TAN'           / \n",
+      "CTYPE2  = 'DEC--TAN'         [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "   / \n",
+      "CRVAL1  =                  247.0 / [deg] Coordinate value at reference poi [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "nt\n",
+      "CRVAL2  =                  55.1 / [deg] Coordinate value at reference point\n",
+      "L [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Verification reported errors: [astropy.io.fits.verify]\n",
+      "WARNING: VerifyWarning: Card 'ONPOLE ' is not FITS standard (equal sign not at column 8).  Fixed 'ONPOLE ' card to meet the FITS standard. [astropy.io.fits.verify]\n",
+      "WARNING: VerifyWarning: Unfixable error: Illegal keyword name 'ONPOLE ' [astropy.io.fits.verify]\n",
+      "WARNING: VerifyWarning: Card 'ONPOLE ' is not FITS standard (invalid value string: '0.0 / [deg] Native longitude of celestial pole\\nLATPOLE').  Fixed 'ONPOLE ' card to meet the FITS standard. [astropy.io.fits.verify]\n",
+      "WARNING: VerifyWarning: Unfixable error: Unprintable string '[deg] Native longitude of celestial pole\\nLATPOLE'; header comments may only contain printable ASCII characters [astropy.io.fits.verify]\n",
+      "WARNING: VerifyWarning: Note: astropy.io.fits uses zero-based indexing.\n",
+      " [astropy.io.fits.verify]\n",
+      "WARNING: VerifyWarning: Card is too long, comment will be truncated. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Card '=' is not FITS standard (equal sign not at column 8).  Fixed '=' card to meet the FITS standard. [astropy.io.fits.verify]\n",
+      "WARNING: VerifyWarning: Unfixable error: Illegal keyword name '=' [astropy.io.fits.verify]\n",
+      "WARNING: FITSFixedWarning:  0.5 / Pixel coordinate of reference point\n",
+      "a floating-point value was expected. [astropy.wcs.wcs]\n",
+      "WARNING: FITSFixedWarning:  / \n",
+      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ORDER=16\n",
+    "for field in fields:\n",
+    "    starmask.reg2moc('dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg',\n",
+    "            '../dmu2/dmu2_field_coverages/' + field[0] + '_MOC.fits',\n",
+    "            'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '_O' + str(ORDER) + '17_MOC.fits',\n",
+    "            ra_typ=field[1],\n",
+    "            dec_typ=field[2],\n",
+    "            order=ORDER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
