[dmu1_ml_ELAIS-N1] Put HTML generated files in notebook_output excluded from git

--- a/dmu1/dmu1_ml_ELAIS-N1/index.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/index.ipynb
@@ -17,21 +17,21 @@
     "\n",
     "For each pristine catalogue, a specific notebook is used for its preparation: the selection of columns, the conversion of some magnitudes or fluxes when needed, the removal of duplicated sources, the correction of astrometry using Gaia as reference, and the flagging of possible Gaia objects.\n",
     "\n",
-    "- [1.1_INT-WFC.ipynb](1.1_INT-WFC.ipynb) for Isaac Newton Telescope / Wide Field Camera (INT/WFC) data\n",
-    "- [1.2_UKIDSS-DXS.ipynb](1.2_UKIDSS-DXS.ipynb) for UKIRT Infrared Deep Sky Survey / Deep Extragalactic Survey (UKIDSS/DXS) data\n",
-    "- [1.3_HSC-SSP.ipynb](1.3_HSC-SSP.ipynb) for Hyper Suprime-Cam Subaru Strategic Program Catalogues (HSC-SSP) data\n",
-    "- [1.4_PanSTARRS-3SS.ipynb](1.4_PanSTARRS-3SS.ipynb) for Pan-STARRS1 - 3pi Steradian Survey (3SS) data\n",
-    "- [1.5_SpARCS.ipynb](1.5_SpARCS.ipynb) for Spitzer Adaptation of the Red-sequence Cluster Survey (SpARCS) data\n",
-    "- [1.6_SERVS.ipynb](1.6_SERVS.ipynb) for Spitzer datafusion SERVS data\n",
-    "- [1.7_SWIRE.ipynb](1.7_SWIRE.ipynb) for Spitzer datafusion SWIRE data\n",
+    "- [1.1_INT-WFC.html](1.1_INT-WFC.html) for Isaac Newton Telescope / Wide Field Camera (INT/WFC) data\n",
+    "- [1.2_UKIDSS-DXS.html](1.2_UKIDSS-DXS.html) for UKIRT Infrared Deep Sky Survey / Deep Extragalactic Survey (UKIDSS/DXS) data\n",
+    "- [1.3_HSC-SSP.html](1.3_HSC-SSP.html) for Hyper Suprime-Cam Subaru Strategic Program Catalogues (HSC-SSP) data\n",
+    "- [1.4_PanSTARRS-3SS.html](1.4_PanSTARRS-3SS.html) for Pan-STARRS1 - 3pi Steradian Survey (3SS) data\n",
+    "- [1.5_SpARCS.html](1.5_SpARCS.html) for Spitzer Adaptation of the Red-sequence Cluster Survey (SpARCS) data\n",
+    "- [1.6_SERVS.html](1.6_SERVS.html) for Spitzer datafusion SERVS data\n",
+    "- [1.7_SWIRE.html](1.7_SWIRE.html) for Spitzer datafusion SWIRE data\n",
     "\n",
     "## Catalogue merging\n",
     "\n",
-    "The [2_Merging.ipynb](2_Merging.ipynb) notebook performs the merging of the pristine catalogues into the master list.\n",
+    "The [2_Merging.html](2_Merging.html) notebook performs the merging of the pristine catalogues into the master list.\n",
     "\n",
     "## Diagnostics\n",
     "\n",
-    "The [3_Checks_and_diagnostics.ipynb](3_Checks_and_diagnostics.ipynb) notebook presents some checks and diagnostic plots on the final master list.\n"
+    "The [3_Checks_and_diagnostics.html](3_Checks_and_diagnostics.html) notebook presents some checks and diagnostic plots on the final master list.\n"
    ]
   }
  ],
